--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,7 +12,9 @@ body {
 .logoContainer i {
   display: none;
 }
-
+.suit {
+  display: none;
+}
 .notButtons {
   display: flex;
   flex-direction: row;
@@ -165,21 +167,14 @@ a:visited {
   padding: 30px;
   background-color: white;
   border-radius: 20px;
-  height: 660px;
+  height: 480px;
   width: 300px;
   position: relative;
 }
-.icons {
-  margin-top: 17px;
-}
-.icons i {
-  margin-bottom: 18px;
-}
-.iconAndPrising {
+
+.itemCollect {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  margin-top: 40px;
 }
 
 .investButton {
@@ -251,6 +246,18 @@ a:visited {
 .fa-check-circle {
   color: green;
   margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.icons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.icons p {
+  font-weight: 700;
 }
 
 .description {
@@ -823,29 +830,24 @@ footer li {
     background-color: white;
     border-radius: 20px;
     height: 500px;
-    width: 300px;
+    width: 380px;
     position: relative;
   }
   .icons {
-    margin-top: 8px;
-  }
-  .icons i {
-    margin-bottom: 17px;
-    font-size: 10px;
-  }
-  .iconAndPrising {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    margin-top: 40px;
+    align-items: center;
   }
+  .icons p {
+    font-weight: 500;
+    font-size: 12px;
+  }
+
   .planHeadText {
     text-align: center;
     font-weight: 900;
-    font-size: 18px;
-  }
-  .pricing p {
-    font-size: 10px;
+    font-size: 16px;
   }
 
   .investButton {
@@ -858,10 +860,6 @@ footer li {
     position: absolute;
     right: 20px;
   }
-
-  /* #first {
-    height: 450px;
-  } */
   header .nav a {
     text-decoration: none;
     font-weight: 900;
@@ -887,7 +885,6 @@ footer li {
     border-radius: 0 0 30px 30px;
     height: 450px;
     justify-content: center;
-    background-image: url("../assets/suit.png");
   }
 
   .logoContainer {
@@ -914,7 +911,6 @@ footer li {
     text-decoration: none;
     font-size: 14px;
     font-weight: 700;
-    margin: 20px;
     height: 40px;
     width: 100px;
   }
@@ -1140,5 +1136,17 @@ footer li {
     font-size: 12px;
     font-weight: 700;
     border-radius: 10px;
+  }
+  .notButtons {
+    bottom: 20px;
+    position: absolute;
+    display: flex;
+    margin-right: 100px;
+  }
+  .notButtons button {
+    margin-right: 20px;
+  }
+  .suit {
+    display: flex;
   }
 }
