--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -72,10 +72,11 @@
             <i class="fas fa-bars" onclick="toggleMenu()"></i>
           </div>
       <div class="menuItems" id="menuList">
-      
-          <div class="notButtons" >      
+      <img class="suit" src= {% static 'assets/suit.png' %} alt="">
+          <div class="notButtons" >
+              
               <button id="headerButtons" type="submit"><a href="/signup">SignUp</a></button>
-              <button id="headerButtons" type="submit"><a href="/signin">SignIn</a></button>
+              <button class="rihrih" id="headerButtons" type="submit"><a href="/signin">SignIn</a></button>
           </div>
           
     </div>
@@ -317,28 +318,19 @@
                     <h1 class="planHeadText">2 Hour plan</h1>
                     <hr class="line" size="0.5" width="10%" color="gray">  
 
-                    <div class="iconAndPrising"> 
-                        <div class="icons">
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            
-                        </div>
-    
-                        <div class="pricing">
-                            <p>Invest $100 Earn $150 </p>
-                            <p>Invest $250 Earn $375</p>
-                            <p>Invest $300 Earn $450</p>
+                  
+                      <div class="icons">
+                        <div>                   
+                            <p>Invest $100 Earn $150 </p>                 
+                            <p>Invest $250 Earn $375</p>                                             
+                            <p>Invest $300 Earn $450</p>                                            
                             <p>Invest $400 Earn $600</p>
                             <p>Invest $500 Earn $750</p>
                             <p>Invest $1000 Earn $1500</p>
                             <p>Invest $2000 Earn $3000</p>
-                        </div>                      
+                        </div>                              
                     </div>
+
                     <button id="goToPaymentButton" onclick="goToDeposit()"  class="investButton">Invest now</button>
                 </div>
 
@@ -350,21 +342,11 @@
                     <h1 class="planHeadText">24 Hour plan</h1>
                     <hr class="line" size="0.5" width="10%" color="gray">  
 
-                    <div class="iconAndPrising"> 
-                        <div class="icons">
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            <i class="fas fa-check-circle"></i><br>
-                            
-                        </div>
+               
+                       
     
-                        <div class="pricing">
+                        <div class="icons">
+                          <div>  
                             <p>Invest $500 Earn $1500 (Min) </p>
                             <p>Invest $600 Earn $1800</p>
                             <p>Invest $700 Earn $2100</p>
@@ -374,9 +356,10 @@
                             <p>Invest $2000 Earn $6000</p>
                             <p>Invest $10000 Earn $16000</p>
                             <p>Invest $20000 Earn $33000</p>
+                          </div>  
                         </div>
 
-                    </div>  
+           
                     <button id="goToPaymentButton" onclick="goToDeposit()"  class="investButton">Invest now</button>
                 </div>
 
